// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-pagination #render should render as expected (1) 1`] = `
<gux-pagination-beta current-page="1" items-per-page="25" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <gux-pagination-advanced-beta current-page="1" items-per-page="25" total-items="1000" total-pages="40"></gux-pagination-advanced-beta>
  </mock:shadow-root>
</gux-pagination-beta>
`;

exports[`gux-pagination #render should render as expected (2) 1`] = `
<gux-pagination-beta current-page="1" items-per-page="50" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <gux-pagination-advanced-beta current-page="1" items-per-page="50" total-items="1000" total-pages="20"></gux-pagination-advanced-beta>
  </mock:shadow-root>
</gux-pagination-beta>
`;

exports[`gux-pagination #render should render as expected (3) 1`] = `
<gux-pagination-beta current-page="1" items-per-page="75" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <gux-pagination-advanced-beta current-page="1" items-per-page="75" total-items="1000" total-pages="14"></gux-pagination-advanced-beta>
  </mock:shadow-root>
</gux-pagination-beta>
`;

exports[`gux-pagination #render should render as expected (4) 1`] = `
<gux-pagination-beta current-page="1" items-per-page="100" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <gux-pagination-advanced-beta current-page="1" items-per-page="100" total-items="1000" total-pages="10"></gux-pagination-advanced-beta>
  </mock:shadow-root>
</gux-pagination-beta>
`;

exports[`gux-pagination #render should render as expected (5) 1`] = `
<gux-pagination-beta current-page="1" items-per-page="25" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <gux-pagination-advanced-beta current-page="1" items-per-page="25" total-items="1000" total-pages="40"></gux-pagination-advanced-beta>
  </mock:shadow-root>
</gux-pagination-beta>
`;

exports[`gux-pagination #render should render as expected (6) 1`] = `
<gux-pagination-beta current-page="10" items-per-page="25" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <gux-pagination-advanced-beta current-page="10" items-per-page="25" total-items="1000" total-pages="40"></gux-pagination-advanced-beta>
  </mock:shadow-root>
</gux-pagination-beta>
`;

exports[`gux-pagination #render should render as expected (7) 1`] = `
<gux-pagination-beta current-page="10" items-per-page="50" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <gux-pagination-advanced-beta current-page="10" items-per-page="50" total-items="1000" total-pages="20"></gux-pagination-advanced-beta>
  </mock:shadow-root>
</gux-pagination-beta>
`;

exports[`gux-pagination #render should render as expected (8) 1`] = `
<gux-pagination-beta current-page="10" items-per-page="75" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <gux-pagination-advanced-beta current-page="10" items-per-page="75" total-items="1000" total-pages="14"></gux-pagination-advanced-beta>
  </mock:shadow-root>
</gux-pagination-beta>
`;

exports[`gux-pagination #render should render as expected (9) 1`] = `
<gux-pagination-beta current-page="10" items-per-page="100" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <gux-pagination-advanced-beta current-page="10" items-per-page="100" total-items="1000" total-pages="10"></gux-pagination-advanced-beta>
  </mock:shadow-root>
</gux-pagination-beta>
`;

exports[`gux-pagination #render should render as expected (10) 1`] = `
<gux-pagination-beta current-page="1" items-per-page="25" layout="simple" total-items="1000">
  <mock:shadow-root>
    <gux-pagination-simple-beta current-page="1" items-per-page="25" total-items="1000" total-pages="40"></gux-pagination-simple-beta>
  </mock:shadow-root>
</gux-pagination-beta>
`;

exports[`gux-pagination #render should render as expected (11) 1`] = `
<gux-pagination-beta current-page="-3" items-per-page="25" layout="advanced" total-items="1000">
  <mock:shadow-root>
    <gux-pagination-advanced-beta current-page="1" items-per-page="25" total-items="1000" total-pages="40"></gux-pagination-advanced-beta>
  </mock:shadow-root>
</gux-pagination-beta>
`;

exports[`gux-pagination #render should render as expected (12) 1`] = `
<gux-pagination-beta current-page="-3" items-per-page="25" layout="advanced" total-items="0">
  <mock:shadow-root>
    <gux-pagination-advanced-beta current-page="0" items-per-page="25" total-items="0" total-pages="0"></gux-pagination-advanced-beta>
  </mock:shadow-root>
</gux-pagination-beta>
`;
